--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 			rel="stylesheet"
 			type="text/css"
 		/>
+		
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="css/clear.css" />
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
@@ -385,10 +387,10 @@
 						<div class="one_half last" style="width: auto">
 							<div id="register-buttons">
 								<a href="https://bit.ly/techacks3" target="_blank" class="bn5"
-									>Join Discord</a
+									><i class="fa-brands fa-discord"></i>Discord</a
 								>
 								<a href="https://techacks.devfolio.co/" target="_blank" class="bn5"
-									><img src="images/devfolio.png" alt="devfolio" style="height:14px;"> Register now</a
+									><img src="images/devfolio.png" alt="devfolio" style="height:14px; width=14px;"> Register</a
 								>
 							</div>
 						</div>
