--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 						<div class="one_half last" style="width: auto">
 							<div id="register-buttons">
 								<a href="https://bit.ly/techacks3" target="_blank" class="bn5"
-									><i class="fa-brands fa-discord"></i>Discord</a
+									><i class="fa fa-discord"></i>Discord</a
 								>
 								<a href="https://techacks.devfolio.co/" target="_blank" class="bn5"
 									><img src="images/devfolio.png" alt="devfolio" style="height:14px; width=10px;"> Register</a
