--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 			type="text/css"
 		/>
 		
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="css/clear.css" />
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
@@ -390,7 +389,7 @@
 									><i class="fa fa-discord"></i>Discord</a
 								>
 								<a href="https://techacks.devfolio.co/" target="_blank" class="bn5"
-									><img src="images/devfolio.png" alt="devfolio" style="height:14px; width=10px;"> Register</a
+									><img src="images/devfolio.png" alt="devfolio" style="width=10px;"> Register</a
 								>
 							</div>
 						</div>
