--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 									><i class="fa fa-discord"></i>Discord</a
 								>
 								<a href="https://techacks.devfolio.co/" target="_blank" class="bn5"
-									><img src="images/devfolio.png" alt="devfolio" style="width=10px;"> Register</a
+									><img src="images/devfolio.png" alt="devfolio" style="width=10px; height=12px"> Register</a
 								>
 							</div>
 						</div>
