--- a/index.html
+++ b/index.html
@@ -386,10 +386,10 @@
 						<div class="one_half last" style="width: auto">
 							<div id="register-buttons">
 								<a href="https://bit.ly/techacks3" target="_blank" class="bn5"
-									><i class="fa fa-discord"></i>Discord</a
+									><img src="images/discord.png" alt="devfolio">Discord</a
 								>
 								<a href="https://techacks.devfolio.co/" target="_blank" class="bn5"
-									><img src="images/devfolio.png" alt="devfolio" style="width=10px; height=12px"> Register</a
+									><img src="images/devfolio.png" alt="devfolio"> Register</a
 								>
 							</div>
 						</div>
@@ -496,11 +496,10 @@
 							<details>
 								<summary>Is the event online or offline?</summary>
 								<div class="faq__content">
-									<p>
-										The event is hybrid, participants can join online or
-										offline. The hackathon will be held hybrid on 1<sup>st</sup>
-										and 2<sup>nd</sup> December 2022, and the inauguration is on
-										27<sup>th</sup> November 2022.
+									<p>	The online phase for all participants begins on 27th November 2022.
+										The final event is hybrid, participants can join online or
+										offline. The hybrid mode of the hackathon will be held
+										on 1<sup>st</sup> and 2<sup>nd</sup> December 2022.
 									</p>
 								</div>
 							</details>
@@ -511,8 +510,8 @@
 									<p>
 										Participants are to register individually. If you already
 										have a team, please ask your teammates to register too. If
-										you don't have one, teams will be formed on 27<sup>th</sup>
-										November 2022 on basis of participants' skills and interests. 
+										you don't have one, teams will be formed from 25<sup>th</sup>
+										November 2022 on basis of participants' skills and interests and on Discord. 
 										The team size should be between 3 to 5 members.
 									</p>
 								</div>
@@ -552,16 +551,16 @@
 										The closest railway station to reach Chitkara University is
 										<a
 											href="https://erail.in/info/chandigarh-railway-station-CDG/21387"
-											target="_blank"
+											target="_blank" style="color:blue;"
 											>Chandigarh Railway Station</a
 										>
 										or
 										<a
 											href="https://indiarailinfo.com/station/map/rajpura-junction-rpj/650"
-											target="_blank"
+											target="_blank" style="color:blue;"
 											>Rajpura Junction</a
 										>. The nearest airport is the
-										<a href="https://www.chandigarhairport.com/" target="_blank"
+										<a href="https://www.chandigarhairport.com/" target="_blank" style="color:blue;"
 											>Chandigarh Airport</a
 										>. You can take a cab or an auto from these places. You can
 										also find buses from Chandigarh Sector 43 Bus Stand.
@@ -576,7 +575,7 @@
 									<p>
 										We will help with food, accomodation or any other
 										requirement on prior request by email to
-										<a href="mailto:info@techacks.tech" target="_blank"
+										<a href="mailto:info@techacks.tech" target="_blank" style="color:blue;"
 											>info@techacks.tech</a
 										>.
 									</p>
@@ -588,7 +587,7 @@
 									<p>
 										If your query is not resolved yet, you always have an option
 										to write us an email to
-										<a href="mailto:info@techacks.tech" target="_blank"
+										<a href="mailto:info@techacks.tech" target="_blank" style="color:blue;"
 											>info@techacks.tech</a
 										>. Feel free to use that option!
 									</p>
