--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 				<div class="section-content-holder right">
 					<div class="content-wrapper">
 						<div class="content-title-holder">
-							<p class="content-title" style="font-family:montserrat;">Register</p>
+							<p class="content-title">Register</p>
 						</div>
 
 						<div id="register-div" class="one_half" style="padding-top:50px;">
@@ -386,7 +386,7 @@
 						<div class="one_half last" style="width: auto">
 							<div id="register-buttons">
 								<a href="https://bit.ly/techacks3" target="_blank" class="bn5"
-									><img src="images/discord.png" alt="devfolio">Discord</a
+									><img src="images/discord.png" alt="discord">Discord</a
 								>
 								<a href="https://techacks.devfolio.co/" target="_blank" class="bn5"
 									><img src="images/devfolio.png" alt="devfolio"> Register</a
