--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 						</div>
 
 						<div id="register-div" class="one_half" style="padding-top:50px;">
-							See you on<strong> 27th November 2022</strong> on Discord
+							D-day on<strong> 27th November 2022</strong> on Discord
 							<div style="font-size: 1rem; padding-top: 10%">
 							</div>
 						</div>
@@ -386,10 +386,10 @@
 						<div class="one_half last" style="width: auto">
 							<div id="register-buttons">
 								<a href="https://bit.ly/techacks3" target="_blank" class="bn5"
-									><img src="images/discord.png" alt="discord">Discord</a
+									>Join Discord</a
 								>
 								<a href="https://techacks.devfolio.co/" target="_blank" class="bn5"
-									><img src="images/devfolio.png" alt="devfolio">Register</a
+									>Register</a
 								>
 							</div>
 						</div>
