Sponsors rearranged, Title edited

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<li><a href="#about">About</a></li>
 					<li><a href="#register">Register</a></li>
 					<li><a href="#sponsors">Sponsors</a></li>
-					<li><a href="#faq">Faq's</a></li>
+					<li><a href="#faq">FAQ's</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -69,7 +69,7 @@
 				<p style="text-align: center; color: white; font-size: 25px;">
 					Hybrid Mode | D-Day: 27th November 2022 | Finale: 1st & 2nd December 2022
 				</p>
-				<p style="text-align: center; color: white; font-size: 25px;">Registration Fee ₹0 | Goodies for all participants worth ₹50,000</p>
+				<p style="text-align: center; color: white; font-size: 25px;">No Registration Fee | Swags for all participants worth ₹50,000</p>
 				<br /><br />
 				<a href="#register" class="bn5"
 					>Register Now</a
@@ -427,37 +427,33 @@
 				</h1>
 					<hr>
 				<h1 style="color: white; text-align: center; padding: 5%">
-					Prime Sponsors
-				</h1>
-				<div class="patrons">
-					<a href="https://devfolio.co/"><img src="images/sponsors/devfolio.png" alt="devfolio" style="width: 200px;"></a>
-					<a href="https://polygon.technology/"><img src="images/sponsors/polygon.png" alt="polygon"  style="width: 200px;"></a>
-					<a href="https://redbull.com/"><img src="images/sponsors/redbull.png" alt="redbull" style="width: 150px;"></a>
-				</div><br><br>
-					<hr>
-				<h1 style="color: white; text-align: center; padding: 5%">
 					Gold Sponsors
 				</h1>
 				<div class="patrons">
-					<a href="https://www.elearnmarkets.com/" target="_blank"><img src="images/sponsors/elearnmarkets.png" alt="elearnmarkets" style="width: 200px;"></a>
-					<a href="https://www.stickermule.com/" target="_blank"><img src="images/sponsors/stickermule.png" alt="stickermule" style="width: 200px;"></a>
+					<a href="https://devfolio.co/"><img src="images/sponsors/devfolio.png" alt="devfolio" style="width: 200px;"></a>
 					<a href="https://fossunited.org/" target="_blank"><img src="images/sponsors/foss-united.png" alt="foss-united" style="width: 150px;"></a>
-					<a href="https://www.hellenergy.com/en/" target="_blank"><img src="images/sponsors/hellenergy.png" alt="hell-energy" style="width: 200px;"></a>
+					
+				</div>
+				<div class="patrons">
 				</div><br><br>
 						<hr>
 				<h1 style="color: white; text-align: center; padding: 5%">
-					Silver Sponsors
+					Value Addition Sponsors
 				</h1>
 				<div class="patrons">
-					<a href="https://www.solana.com/" target="_blank"><img src="images/sponsors/solana.png" alt="solana" style="width: 200px;"></a>
+					<!-- <a href="https://polygon.technology/"><img src="images/sponsors/polygon.png" alt="polygon"  style="width: 200px;"></a> -->
+					<a href="https://redbull.com/"><img src="images/sponsors/redbull.png" alt="redbull" style="width: 150px;"></a>
+					<!-- <a href="https://www.solana.com/" target="_blank"><img src="images/sponsors/solana.png" alt="solana" style="width: 200px;"></a> -->
+					<a href="https://www.stickermule.com/" target="_blank"><img src="images/sponsors/stickermule.png" alt="stickermule" style="width: 200px;"></a>
 					<a href="https://www.echo3d.co/"><img src="images/sponsors/echo-3d.png" alt="echo-3d" style="width: 200px;"></a>
 					<a href="https://balsamiq.com/"><img src="images/sponsors/balasmiq.png" alt="balasmiq" style="width: 200px;"></a>
-					<a href="https://www.wolfram.com/language/"><img src="images/sponsors/wolfram-language.png" alt="wolfram-language" style="width: 200px;"></a>
+					
 				</div><br><br>
 				<div class="patrons">
 					<a href="http://www.colorib.com" target="_blank"><img src="images/sponsors/colorlib.png" alt="colorib" style="width: 200px;"></a>
 					<!-- <a href="https://taskade.com/"><img src="images/sponsors/taskade.png" alt="taskade" style="width: 150px;"></a> -->
 					<a href="https://www.filecoin.com/" target="_blank"><img src="images/sponsors/filecoin.png" alt="filecoin" style="width: 200px;"></a>
+					<a href="https://www.wolfram.com/language/"><img src="images/sponsors/wolfram-language.png" alt="wolfram-language" style="width: 200px;"></a>
 					<a href="https://gen.xyz/" target="_blank"><img src="images/sponsors/gen.xyz.png" alt="gen.xyz" style="width: 200px;"></a>
 					<a href="https://1password.com/" target="_blank"><img src="images/sponsors/one-password.png" alt="one-password" style="width: 200px;"></a>
 				</div><br><br>
@@ -466,6 +462,9 @@
 					<a href="https://interviewbuddy.in/" target="_blank"><img src="images/sponsors/interview-buddy.png" alt="interview-buddy" style="width: 200px;"></a>
 					<a href="http://www.globalcert.cloud" target="_blank"><img src="images/sponsors/global-cert.png" alt="global-cert" style="width: 200px;"></a>
 					<a href="https://www.axure.com/" target="_blank"><img src="images/sponsors/axure.png" alt="axure" style="width: 200px;" /></a>
+					<a href="https://www.elearnmarkets.com/" target="_blank"><img src="images/sponsors/elearnmarkets.png" alt="elearnmarkets" style="width: 200px;"></a>
+					<a href="https://www.hellenergy.com/en/" target="_blank"><img src="images/sponsors/hellenergy.png" alt="hell-energy" style="width: 200px;"></a>
+
 				</div><br><br>
 					<hr>
 				<h1 style="color: white; text-align: center; padding: 5%">
