--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 				</td>
 			</tr>
 		</table> -->
-
+		<!-- 	Devfolio apply btn js  -->
+		<script defer async src="https://apply.devfolio.co/v2/sdk.js"></script>
 		<!-- Menu -->
 		<div class="menu-wrapper center-relative">
 			<nav id="header-main-menu">
@@ -388,11 +389,14 @@
 								<a href="https://bit.ly/techacks3" target="_blank" class="bn5"
 									>Join Discord</a
 								>
-								<a href="https://techacks.devfolio.co/" target="_blank" class="bn5"
-									>Register</a
-								>
 							</div>
 						</div>
+						<div 
+							class="apply-button" 
+							data-hackathon-slug="techacks" 
+							data-button-theme="light"
+							style="height: 44px; width: 312px"
+						></div>
 						<div class="clear"></div>
 						<br />
 					</div>
@@ -430,7 +434,7 @@
 					Prime Sponsors
 				</h1>
 				<div class="patrons">
-					<a href="https://devfolio.co/"><img src="images/sponsors/devfolio.png" alt="devfolio" style="width: 320px;"></a>
+					<a href="https://devfolio.co/"><img src="images/sponsors/devfolio.png" alt="devfolio" style="width: 200px;"></a>
 					<a href="https://polygon.technology/"><img src="images/sponsors/polygon.png" alt="polygon"  style="width: 200px;"></a>
 					<a href="https://redbull.com/"><img src="images/sponsors/redbull.png" alt="redbull" style="width: 150px;"></a>
 					
@@ -467,7 +471,7 @@
 				</div>
 					<hr>
 				<h1 style="color: white; text-align: center; padding: 5%">
-					Value Addition Sponsors
+					Value Addition Partners
 				</h1>
 				<div class="patrons">
 					<a href="https://www.echo3d.co/"><img src="images/sponsors/echo-3d.png" alt="echo-3d" style="width: 200px;"></a>
