--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 								/>
 
 								<h3 style="padding-bottom: 0">
-									How to get a HeadStart for Your Startup
+									Startup Culture
 								</h3>
 
 								<h6>Dr. Nitin Saluja</h6>
@@ -409,7 +409,7 @@
 								data-style="circles"
 								data-timezone="Asia/Kolkata"
 								data-textcolor="#031428"
-								data-date="2022-11-27 00:00"
+								data-date="2022-11-27 12:30"
 								data-background="#000082"
 								data-digitscolor="#000000"
 								data-unitscolor="#000082"
