--- a/index.html
+++ b/index.html
@@ -634,7 +634,11 @@
 										<i class="fa fa-map-marker" style="color: red"></i>
 										<!-- contact details  -->
 										<span class="contact-details"
-											>Location: Chitkara University</span
+											>Address: Chitkara University
+											<span style="font-size:15px;">Chandigarh-Patiala National Highway
+											<br>Opp. Neelam Hospital, Rajpura - 140401
+											<br>Punjab, India
+											</span></span
 										>
 									</div>
 								</div>
@@ -645,7 +649,7 @@
 										<i class="fa fa-envelope" style="color: blue"></i>
 										<!-- contact details  -->
 										<span class="contact-details"
-											>Email: info@techacks.tech</span
+										      >Email: <a href="mailto:info@techacks.tech">info@techacks.tech</a></span
 										>
 									</div>
 								</div>
@@ -694,7 +698,12 @@
 					<br><br>
 					<li><a href="https://devfolio.co/code-of-conduct" target="_blank" class="bn5"
 					>Code of Conduct</a
-				        ></li> <br><br>
+				        ></li>
+					<br>
+					<li><a href="https://drive.google.com/file/d/1Emq6l5ADD2f0dUy7lhwsQwDTeRDFXgvs/view?usp=sharing" target="_blank" class="bn5"
+					>Sposnsorship Prospectus</a
+				        ></li>
+					<br><br>
 					<hr />
 					<li class="social-footer">
 						<a
