--- a/index.html
+++ b/index.html
@@ -488,9 +488,17 @@
 					<a href="https://interviewbuddy.in/" target="_blank"><img src="images/sponsors/interview-buddy.png" alt="interview-buddy" style="width: 200px;"></a>
 					<a href="http://www.globalcert.cloud" target="_blank"><img src="images/sponsors/global-cert.png" alt="global-cert" style="width: 200px;"></a>
 					<a href="https://www.axure.com/" target="_blank"><img src="images/sponsors/axure.png" alt="axure" style="width: 200px;" /></a>
-				</div><br><br>
-					<div class="clear"></div>
-				</div>
+				</div><br><hr><br>
+				<h4 style="color:white; text-align:center;">Interested in sponsoring us?</h4><br><br>
+				<div style="text-align: center;">
+								<a href="a href="https://drive.google.com/file/d/1Emq6l5ADD2f0dUy7lhwsQwDTeRDFXgvs/view?usp=sharing" target="_blank" class="bn5"
+									>Sponsorship Prospectus</a
+								>
+							</div>
+							<br><br><hr><br>
+						</div>
+							<div class="clear"></div>
+
 			</div>
 
 		<!-- Skills -->
@@ -586,7 +594,7 @@
 								</summary>
 								<div class="faq__content">
 									<p>
-										We will help with food, accomodation or any other
+										Before and after the event, we will help with food, accomodation or any other
 										requirement on prior request by email to
 										<a href="mailto:info@techacks.tech" target="_blank" style="color:blue;"
 											>info@techacks.tech</a
@@ -634,7 +642,7 @@
 										<i class="fa fa-map-marker" style="color: red"></i>
 										<!-- contact details  -->
 										<span class="contact-details"
-											>Address: Chitkara University
+											>Address: Chitkara University<br>
 											<span style="font-size:15px;">Chandigarh-Patiala National Highway
 											<br>Opp. Neelam Hospital, Rajpura - 140401
 											<br>Punjab, India
@@ -690,21 +698,12 @@
 		<footer>
 			<div class="footer content-1170 center-relative">
 				<ul>
-					<li><img src="images/cu_logo.png" style="width: 200px;" alt="chitkara" /></li>
-					<li style="color: white">Chitkara University</li>
-					<li style="color: white">
-						Chandigarh-Patiala National Highway, Rajpura, Punjab, 140401
-					</li>
-					<br><br>
+					<li><img src="images/logo-primary.png" style="width: 300px;" alt="chitkara" /></li>
+					<br>
 					<li><a href="https://devfolio.co/code-of-conduct" target="_blank" class="bn5"
 					>Code of Conduct</a
-				        ></li>
-					<br>
-					<li><a href="https://drive.google.com/file/d/1Emq6l5ADD2f0dUy7lhwsQwDTeRDFXgvs/view?usp=sharing" target="_blank" class="bn5"
-					>Sposnsorship Prospectus</a
-				        ></li>
-					<br><br>
-					<hr />
+				        ></li><br>
+					<hr /><br>
 					<li class="social-footer">
 						<a
 							href="https://www.google.com/maps/place/Chitkara+University/@30.5160865,76.6575891,17z/data=!3m1!4b1!4m5!3m4!1s0x390fc32344a6e2d7:0x81b346dee91799ca!8m2!3d30.5160865!4d76.6597778"
