--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
 		<footer>
 			<div class="footer content-1170 center-relative">
 				<ul>
-					<li><img src="images/logo-primary.png" style="width: 300px;" alt="chitkara" /></li>
+					<li><img src="images/logo-primary.png" style="width: 300px;" alt="techacks3" /></li>
 					<br>
 					<li><a href="https://devfolio.co/code-of-conduct" target="_blank" class="bn5"
 					>Code of Conduct</a
