--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<img class="top-logo" src="images/logo-primary.png" alt="Boxus" style="width:250px; height:auto;"/>
 				<br />
 
-				   <h1 style="color:white;">Think. Code. Innovate.</h1>
+				   <h1 style="color:white;">Think • Innovate • Create</h1>
 				<!-- ^ class="big-title" -->
 				<p style="text-align: center; color: white; font-size: 25px;">
 					Hybrid Mode | D-Day: 27th November 2022 | Finale: 1st & 2nd December 2022
