--- a/index.html
+++ b/index.html
@@ -632,17 +632,16 @@
 				</div>
 				<div class="section-content-holder right">
 					<div class="content-wrapper">
-						<h1>We're Here To Help</h1>
+						<h1>Contact details</h1>
 						<div class="contact-form">
 							<div class="contact" style="text-align: center; margin: 1%">
 								<div class="col-md-4 col-sm-4" style="padding: 3%">
 									<!-- contact item -->
 									<div class="contact-item">
 										<!-- big icon -->
-										<i class="fa fa-map-marker" style="color: red"></i>
 										<!-- contact details  -->
 										<span class="contact-details"
-											>Address: Chitkara University<br>
+											>Chitkara University<br>
 											<span style="font-size:15px;">Chandigarh-Patiala National Highway
 											<br>Opp. Neelam Hospital, Rajpura - 140401
 											<br>Punjab, India
