--- a/index.html
+++ b/index.html
@@ -391,12 +391,14 @@
 								>
 							</div>
 						</div>
+						<div style="text-align:center;">
 						<div 
 							class="apply-button" 
 							data-hackathon-slug="techacks" 
 							data-button-theme="light"
 							style="height: 44px; width: 312px"
-						></div>
+						     ></div></div>
+						
 						<div class="clear"></div>
 						<br />
 					</div>
