--- a/index.html
+++ b/index.html
@@ -389,13 +389,24 @@
 								<a href="https://bit.ly/techacks3" target="_blank" class="bn5"
 									>Join Discord</a
 								>
-							</div>
+							</div><br><br>
 						</div>
 						<div style="text-align:center;">
+							<p style="text-align:left; padding-left:60px;">
+								<br>To register, follow these steps:<br><br>
+								1. Click the "Apply with Devfolio" button below<br>
+								2. Create an account on devfolio. If you already have an account, sign in<br>
+								3. Complete your application and submit for review<br>
+								4. If you have a team, register your team on Devfolio and add team members<br>
+								5. Manage your team and submissions your Devfolio hackathon dashboard.<br>
+								<br>
+								<b>If you are not able to see the "Apply with Devfolio" button, click
+								<a href="https://techacks.devfolio.co/" target="_blank"><u>here</u></a> to register.</b>
+							</p>
 						<div 
 							class="apply-button" 
 							data-hackathon-slug="techacks" 
-							data-button-theme="light"
+							data-button-theme="dark"
 							style="height: 44px; width: 312px"
 						     ></div></div>
 						
