--- a/index.html
+++ b/index.html
@@ -400,9 +400,9 @@
 								4. If you have a team, register your team on Devfolio and add team members<br>
 								5. Manage your team and submissions your Devfolio hackathon dashboard.<br>
 								<br>
-								<b>If you are not able to see the "Apply with Devfolio" button, click
-								<a href="https://techacks.devfolio.co/" target="_blank"><u>here</u></a> to register.</b>
-							</p>
+								<b><i>If you are not able to see the "Apply with Devfolio" button below, click
+									<a href="https://techacks.devfolio.co/" target="_blank"><u>here</u></a> to register.</i></b>
+							</p><br><br>
 						<div 
 							class="apply-button" 
 							data-hackathon-slug="techacks" 
