--- a/index.html
+++ b/index.html
@@ -400,8 +400,8 @@
 								4. If you have a team, register your team on Devfolio and add team members<br>
 								5. Manage your team and submissions your Devfolio hackathon dashboard.<br>
 								<br>
-								<b><i>If you are not able to see the "Apply with Devfolio" button below, click
-									<a href="https://techacks.devfolio.co/" target="_blank"><u>here</u></a> to register.</i></b>
+								<b><i>If you don't see the "Apply with Devfolio" button below, click
+									<a href="https://techacks.devfolio.co/" target="_blank"><u>here</u></a> to apply.</i></b>
 							</p><br><br>
 						<div 
 							class="apply-button" 
