--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 		/>
 
 		<link rel="shortcut icon" href="images/favicon.png" />
-		<link
+		<!-- <link
 			href="http://fonts.googleapis.com/css?family=Roboto:300,400,400i,700,700i,900|Montserrat:400,700|PT+Serif"
 			rel="stylesheet"
 			type="text/css"
-		/>
+		/> -->
 		
 		<link rel="stylesheet" type="text/css" href="css/clear.css" />
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
