--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>TecHacks 3.0</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<meta name="description" content="Template by Colorlib" />
+		<meta name="description" content="Think. Innovate. Create" />
 		<meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
 		<meta name="author" content="Colorlib" />
 		<meta
