--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 						</div>
 						<div style="text-align:center;">
 							<p style="text-align:left; padding-left:60px;">
-								<br>To register, follow these steps:<br><br>
+								<br><b>To register, follow these steps:<b><br><br>
 								1. Click the "Apply with Devfolio" button below<br>
 								2. Create an account on devfolio. If you already have an account, sign in<br>
 								3. Complete your application and submit for review<br>
