--- a/index.html
+++ b/index.html
@@ -487,10 +487,10 @@
 					Value Addition Partners
 				</h1>
 				<div class="patrons">
+                                        <a href="https://taskade.com/"><img src="images/sponsors/taskade.png" alt="taskade" style="width: 150px;"></a>
 					<a href="https://www.echo3d.co/"><img src="images/sponsors/echo-3d.png" alt="echo-3d" style="width: 200px;"></a>
 					<a href="https://balsamiq.com/"><img src="images/sponsors/balasmiq.png" alt="balasmiq" style="width: 200px;"></a>
 					<a href="http://www.colorib.com" target="_blank"><img src="images/sponsors/colorlib.png" alt="colorib" style="width: 200px;"></a>
-					<!-- <a href="https://taskade.com/"><img src="images/sponsors/taskade.png" alt="taskade" style="width: 150px;"></a> -->
 				</div><br><br>
 				<div class="patrons">
 					<a href="https://www.wolfram.com/language/"><img src="images/sponsors/wolfram-language.png" alt="wolfram-language" style="width: 200px;"></a>
