--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 								5. Manage your team and submissions your Devfolio hackathon dashboard.<br>
                                                                 6. If you've registered individually, you can find a team on our Discord's #find-a-team and register as a team.
 								<br>
-								<b><i>If you don't see the "Apply with Devfolio" button below, click
+								<b><i>If you don't see the "Apply with Devfolio" button below, please refresh this page, or click
 									<a href="https://techacks.devfolio.co/" target="_blank"><u>here</u></a> to apply.</i></b>
 							</p><br><br>
 						<div 
