--- a/index.html
+++ b/index.html
@@ -394,10 +394,10 @@
 						<div style="text-align:center;">
 							<p style="text-align:left; padding-left:60px;">
 								<br><b>To register, follow these steps:</b><br><br>
-								1. Click the "Apply with Devfolio" button below<br>
-								2. Create an account on devfolio. If you already have an account, sign in<br>
-								3. Complete your application and submit for review<br>
-								4. If you have a team, register your team on Devfolio and add team members<br>
+								1. Click the "Apply with Devfolio" button below.<br>
+								2. Create an account on devfolio. If you already have an account, sign in.<br>
+								3. Complete your application and submit for review.<br>
+								4. If you have a team, register your team on Devfolio and add team members.<br>
 								5. Manage your team and submissions your Devfolio hackathon dashboard.<br>
                                                                 6. If you've registered individually, you can find a team on our Discord's #find-a-team and register as a team.
 								<br>
