--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 					Silver Sponsors
 				</h1>
 				<div class="patrons">
-					<a href="https://www.solana.com/" target="_blank"><img " alt="solana" style="width: 200px;"></a>
+					<a href="https://www.solana.com/" target="_blank"><img="images/sponsors/solana.png" alt="solana" style="width: 200px;"></a>
 					<a href="https://www.filecoin.com/" target="_blank"><img src="images/sponsors/filecoin.png" alt="filecoin" style="width: 200px;"></a>
 					<a href="https://www.replit.com/" target="_blank"><img src="images/sponsors/replit.png" alt="replit" style="width: 200px;"></a>
 					
