--- a/index.html
+++ b/index.html
@@ -213,8 +213,11 @@
 						<br />
 						<br />
 					</div>
-					<br><br><br>
-					<div class="full-width">
+					<div class="clear"></div>
+					</div>
+				</div>
+				<br><br><br>
+					<div class="block content-1170 center-relative">
 						<script>
 							var team1_speed = "700";
 							var team1_auto = "true";
@@ -277,10 +280,8 @@
 						</div>
 					</div> <hr><br>
 					<!-- end full-width div -->
-				</div>
-				<div class="clear"></div>
-			</div>
-		</div>
+				<!-- <div class="clear"></div> -->
+
 
 		<!-- News -->
 		<div id="news" class="section">
@@ -468,7 +469,7 @@
 					Silver Sponsors
 				</h1>
 				<div class="patrons">
-					<a href="https://www.solana.com/" target="_blank"><img="images/sponsors/solana.png" alt="solana" style="width: 200px;"></a>
+					<a href="https://www.solana.com/" target="_blank"><img src="images/sponsors/solana.png" alt="solana" style="width: 200px;"></a>
 					<a href="https://www.filecoin.com/" target="_blank"><img src="images/sponsors/filecoin.png" alt="filecoin" style="width: 200px;"></a>
 					<a href="https://www.replit.com/" target="_blank"><img src="images/sponsors/replit.png" alt="replit" style="width: 200px;"></a>
 					
