--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
 									<div class="contact-item">
 										<!-- big icon -->
 										<!-- contact details  -->
-										<span class="contact-details"
+										<span class="contact-details" style="color: black;"
 											>Chitkara University<br>
 											<span style="font-size:15px;">Chandigarh-Patiala National Highway
 											<br>Opp. Neelam Hospital, Rajpura - 140401
@@ -681,7 +681,7 @@
 										<i class="fa fa-whatsapp" style="color: green"></i>
 										<!-- contact details  -->
 										<span class="contact-details"
-											>Whatsapp: +91 78148 73788</span
+											>Whatsapp: <span style="color:black;">+91 78148 73788</span></span
 										>
 									</div>
 								</div>
