--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 								2. Create an account on devfolio. If you already have an account, sign in.<br>
 								3. Complete your application and submit for review.<br>
 								4. If you have a team, register your team on Devfolio and add team members.<br>
-								5. Manage your team and submissions your Devfolio hackathon dashboard.<br>
+								5. Manage your team and submissions on your Devfolio hackathon dashboard.<br>
                                                                 6. If you've registered individually, you can find a team on our Discord's #find-a-team and register as a team.
 								<br>
 								<b><i>If you don't see the "Apply with Devfolio" button below, please refresh this page, or click
