--- a/index.html
+++ b/index.html
@@ -401,15 +401,13 @@
 						<div style="text-align:center;">
 							<p style="text-align:left; padding-left:60px;">
 								<br><b>To register, follow these steps:</b><br><br>
-								<ul>
+								
 								1. Click the "Apply with Devfolio" button below.<br>
 								2. Create an account on devfolio. If you already have an account, sign in.<br>
 								3. Complete your application and submit for review.<br>
 								4. If you have a team, register your team on Devfolio and add team members.<br>
 								5. Manage your team and submissions on your Devfolio hackathon dashboard.<br>
-                                                                6. If you've registered individually, you can find a team on our Discord's #find-a-team and register as a team.
-							        </ul>
-								<br>
+                                6. If you've registered individually, you can find a team on our Discord's #find-a-team and register as a team.<br>
 								<b><i>If you don't see the "Apply with Devfolio" button below, please refresh this page, or click
 									<a href="https://techacks.devfolio.co/" target="_blank"><u>here</u></a> to apply.</i></b>
 							</p><br><br>
