--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 				</div><br><hr><br>
 				<h4 style="color:white; text-align:center;">Interested in sponsoring us?</h4><br><br>
 				<div style="text-align: center;">
-								<a href="https://drive.google.com/file/d/1Emq6l5ADD2f0dUy7lhwsQwDTeRDFXgvs/view?usp=sharing" target="_blank" class="bn5"
+								<a href="https://drive.google.com/file/d/1faCfCmwyx59_6h3D-FNmbPVGQjQdcoh1/view?usp=share_link" target="_blank" class="bn5"
 									>Sponsorship Prospectus</a
 								>
 							</div>
