--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 								3. Complete your application and submit for review.<br>
 								4. If you have a team, register your team on Devfolio and add team members.<br>
 								5. Manage your team and submissions on your Devfolio hackathon dashboard.<br>
-                                6. If you've registered individually, you can find a team on our Discord's #find-a-team and register as a team.<br><br>
+                                                                6. If you've registered individually, you can find a team on #find-a-team channel in our Discord and register as a team.<br><br>
 								<b><i>If you don't see the "Apply with Devfolio" button below, please refresh this page, or click
 									<a href="https://techacks.devfolio.co/" target="_blank"><u>here</u></a> to apply.</i></b>
 							</p><br><br>
