--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 				</div><br><hr><br>
 				<h4 style="color:white; text-align:center;">Interested in sponsoring us?</h4><br><br>
 				<div style="text-align: center;">
-								<a href="https://bit.ly/th3prospectus" target="_blank" class="bn5"
+								<a href="https://bit.ly/th3sp" target="_blank" class="bn5"
 									>Sponsorship Prospectus</a
 								>
 							</div>
