--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 		<link rel="stylesheet" type="text/css" href="css/sm-clean.css" />
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&display=swap" rel="stylesheet">
 	</head>
 	<body>
                 <!-- <style></style>
@@ -174,7 +177,7 @@
 					</div>
 					<div class="clear"></div>
 				<div class="block portfolio-load-more-holder" style="background-color: rgb(252, 181, 48);">
-					<a target="_self" class="more-posts">Swags and Goodies<br><span style="font-size: 30px;">&</span><br>Internship Opportunities</a>
+					<a target="_self" class="more-posts" style="font-family:'Lato', sans-serif;"><b>Cash Prizes<br><br>Seed Funding<br><br>Internship opportunities<br><br>Swags and Goodies</b></a>
 					
 				</div>
 			</div>
