--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 						<div class="grid-sizer"></div>
 						<div class="grid-item element-item p_one">
 							<div href="single-portfolio.html">
-								<img src="images/prizes.png" alt="" />
+								<img src="images/prize.png" alt="" />
 								<div class="portfolio-text-holder"></div>
 							</div>
 						</div>
