--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 					<a href="https://www.wolfram.com/language/"><img src="images/sponsors/wolfram-language.png" alt="wolfram-language" style="width: 200px;"></a>
 					<a href="https://gen.xyz/" target="_blank"><img src="images/sponsors/gen.xyz.png" alt="gen.xyz" style="width: 200px;"></a>
 					<a href="https://1password.com/" target="_blank"><img src="images/sponsors/one-password.png" alt="one-password" style="width: 200px;"></a>
-					<a href="http://horuson.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/horuson.png" style="width: px;" alt="horuson"></a>
+					<a href="http://horuson.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/horuson.png" style="width: 200px;" alt="horuson"></a>
 				</div><br><br>
 				<div class="patrons">
 					<a href="https://interviewbuddy.in/" target="_blank"><img src="images/sponsors/interview-buddy.png" alt="interview-buddy" style="width: 200px;"></a>
