--- a/index.html
+++ b/index.html
@@ -480,8 +480,9 @@
 							<details>
 								<summary>Is the event online or offline?</summary>
 								<div class="faq__content">
-									<p>	The online phase for all participants is from 27th to 30th December 2022.
-										Only a presentation submission is required in this phase.
+									<p>	The online phase is from 27th to 30th December 2022.
+										Only a presentation submission is required in 
+										this phase for the online teams.
 										The final event is hybrid, participants can join online or
 										offline. The hybrid mode of the hackathon will be held
 										on 6<sup>th</sup> and 7<sup>th</sup> January 2023.
@@ -493,11 +494,11 @@
 								<summary>Is it an individual event or a team event?</summary>
 								<div class="faq__content">
 									<p>
-										Participants are to register individually. If you already
-										have a team, please ask your teammates to register too. If
-										you don't have one, you can use the #find-a-team on Discord Server
-										to find individuals/teams on basis of skills and interests. 
-										The team size is mandatory to be between 3 to 5 members.
+										The team size is mandatory to be between 3 to 5 members. 
+										If you already have a team, you can register as a team. 
+										If you don't have one, you can use the #find-a-team on Discord Server 
+										to find individuals/teams on basis of skills and interests and update your team. 
+										
 									</p>
 								</div>
 							</details>
@@ -506,7 +507,7 @@
 								<div class="faq__content">
 									<p>
 										The registration fee for the event is ₹0 per participant. We
-										are going to be completely free for all hackers out there!
+										are going to be completely free for all the hackers out there!
 									</p>
 								</div>
 							</details>
@@ -559,9 +560,10 @@
 								</summary>
 								<div class="faq__content">
 									<p>
-										Before and after the event, we will help with food, accomodation or any other
-										requirement on prior request. Participants from other universities,	in offline mode, 
-										can request to connect to the logistics team to help with travel and accomodation.
+										Throughout the event, we will help with food, accomodation or any other
+										requirement on prior request. Participants from other universities, in offline mode, 
+										can request to connect to the logistics team to assist with travel and accomodation. 
+										Bus facility will be available before and after the event for railway and bus stations.
 									</p>
 								</div>
 							</details>
