--- a/index.html
+++ b/index.html
@@ -666,6 +666,8 @@
 					<br>
 					<li><a href="https://devfolio.co/code-of-conduct" target="_blank" class="bn5"
 					>Code of Conduct</a
+				        >&emsp;<a href="https://docs.google.com/document/d/14oBtYjhtL4w76VbiwudqGDJSfftWRfNk3wYfjZji_zg/edit?usp=sharing" target="_blank" class="bn5"
+					>Travel and accommodation notice</a
 				        ></li><br>
 					<hr /><br>
 					<li class="social-footer">
