--- a/index.html
+++ b/index.html
@@ -399,8 +399,8 @@
 					Prime Sponsors
 				</h1>
 				<div class="patrons">
-					<a href="https://devfolio.co/"><img src="images/sponsors/devfolio.png" alt="devfolio" style="width: 300px;"></a>
-					<a href="https://polygon.technology/"><img src="images/sponsors/polygon.png" alt="polygon"  style="width: 300px;"></a>
+					<a href="https://devfolio.co/"><img src="images/sponsors/devfolio.png" alt="devfolio" style="width: 400px;"></a>
+					<a href="https://polygon.technology/"><img src="images/sponsors/polygon.png" alt="polygon"  style="width: 400px;"></a>
 					
 				</div><br><br>
 				<hr>
@@ -409,7 +409,7 @@
 				</h1>	
 				<div class="patrons">
 					<a href="https://fossunited.org/" target="_blank"><img src="images/sponsors/foss-united.png" alt="foss-united" style="width: 150px;"></a>
-					<a href="https://www.elearnmarkets.com/" target="_blank"><img src="images/sponsors/elearnmarkets.png" alt="elearnmarkets" style="width: 200px;"></a>
+					<a href="https://www.elearnmarkets.com/" target="_blank"><img src="images/sponsors/elearnmarkets.png" alt="elearnmarkets" style="width: 300px;"></a>
 
 				</div><br><br>
 						<hr>
@@ -427,16 +427,16 @@
 					Community Partners
 				</h1>
 				<div class="patrons">
-					<a href="https://www.ieindia.org" target="_blank"><img src="images/sponsors/iei-logo.png" alt="iei-india" style="width: 200px;" /></a>
-					<a href="https://www.iete.org/" target="_blank"><img src="images/sponsors/iete-logo.png" alt="iete" style="width: 200px;" /></a>
-					<a href="https://www.instagram.com/ebuzz_club/" target="_blank"><img src="images/sponsors/ebuzz.png" alt="ebuzz-cu" style="width: 200px;" /></a>
+					<a href="https://www.ieindia.org" target="_blank"><img src="images/sponsors/iei-logo.png" alt="iei-india" style="width: 100px;" /></a>
+					<a href="https://www.iete.org/" target="_blank"><img src="images/sponsors/iete-logo.png" alt="iete" style="width: 100px;" /></a>
+					<a href="https://www.instagram.com/ebuzz_club/" target="_blank"><img src="images/sponsors/ebuzz.png" alt="ebuzz-cu" style="width: 100px;" /></a>
 				</div>
 					<hr>
 				<h1 style="color: white; text-align: center; padding: 5%">
 					Value Addition Partners
 				</h1>
 				<div class="patrons">
-                                        <a href="https://taskade.com/"><img src="images/sponsors/taskade.png" alt="taskade" style="width: 150px;"></a>
+                                        <a href="https://taskade.com/"><img src="images/sponsors/taskade.png" alt="taskade" style="width: 120px;"></a>
 					<a href="https://www.echo3d.co/"><img src="images/sponsors/echo-3d.png" alt="echo-3d" style="width: 200px;"></a>
 					<a href="https://balsamiq.com/"><img src="images/sponsors/balasmiq.png" alt="balasmiq" style="width: 200px;"></a>
 					<a href="http://www.colorib.com" target="_blank"><img src="images/sponsors/colorlib.png" alt="colorib" style="width: 200px;"></a>
@@ -454,7 +454,7 @@
 				</div><br><hr><br>
 				<h4 style="color:white; text-align:center;">Interested in sponsoring us?</h4><br><br>
 				<div style="text-align: center;">
-								<a href="https://bit.ly/th3sp" target="_blank" class="bn5"
+								<a href="https://bit.ly/th3sponsorship" target="_blank" class="bn5"
 									>Sponsorship Prospectus</a
 								>
 							</div>
