--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
 					<li><a href="https://devfolio.co/code-of-conduct" target="_blank" class="bn5"
 					>Code of Conduct</a
 				        >&emsp;<a href="https://docs.google.com/document/d/14oBtYjhtL4w76VbiwudqGDJSfftWRfNk3wYfjZji_zg/edit?usp=sharing" target="_blank" class="bn5"
-					>Travel and accommodation notice</a
+					>Transport notice</a
 				        ></li><br>
 					<hr /><br>
 					<li class="social-footer">
