--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
 					<br>
 					<li><a href="https://devfolio.co/code-of-conduct" target="_blank" class="bn5"
 					>Code of Conduct</a
-				        ><br><a href="https://docs.google.com/document/d/14oBtYjhtL4w76VbiwudqGDJSfftWRfNk3wYfjZji_zg/edit?usp=sharing" target="_blank" class="bn5"
+				        ><br><br><br><a href="https://docs.google.com/document/d/14oBtYjhtL4w76VbiwudqGDJSfftWRfNk3wYfjZji_zg/edit?usp=sharing" target="_blank" class="bn5"
 					>Transport notice</a
 				        ></li><br>
 					<hr /><br>
