--- a/index.html
+++ b/index.html
@@ -409,8 +409,6 @@
 				</h1>	
 				<div class="patrons">
 					<a href="https://fossunited.org/" target="_blank"><img src="images/sponsors/foss-united.png" alt="foss-united" style="width: 150px;"></a>
-					<a href="https://www.elearnmarkets.com/" target="_blank"><img src="images/sponsors/elearnmarkets.png" alt="elearnmarkets" style="width: 300px;"></a>
-
 				</div><br><br>
 						<hr>
 				<h1 style="color: white; text-align: center; padding: 5%">
@@ -451,6 +449,7 @@
 					<a href="https://interviewbuddy.in/" target="_blank"><img src="images/sponsors/interview-buddy.png" alt="interview-buddy" style="width: 200px;"></a>
 					<a href="http://www.globalcert.cloud" target="_blank"><img src="images/sponsors/global-cert.png" alt="global-cert" style="width: 200px;"></a>
 					<a href="https://www.axure.com/" target="_blank"><img src="images/sponsors/axure.png" alt="axure" style="width: 200px;" /></a>
+					<a href="https://www.elearnmarkets.com/" target="_blank"><img src="images/sponsors/elearnmarkets.png" alt="elearnmarkets" style="width: 300px;"></a>
 				</div><br><hr><br>
 				<h4 style="color:white; text-align:center;">Interested in sponsoring us?</h4><br><br>
 				<div style="text-align: center;">
@@ -666,7 +665,7 @@
 					<br>
 					<li><a href="https://devfolio.co/code-of-conduct" target="_blank" class="bn5"
 					>Code of Conduct</a
-				        ><br><br><br><a href="https://docs.google.com/document/d/14oBtYjhtL4w76VbiwudqGDJSfftWRfNk3wYfjZji_zg/edit?usp=sharing" target="_blank" class="bn5"
+				        ><br><br><a href="https://docs.google.com/document/d/14oBtYjhtL4w76VbiwudqGDJSfftWRfNk3wYfjZji_zg/edit?usp=sharing" target="_blank" class="bn5"
 					>Transport notice</a
 				        ></li><br>
 					<hr /><br>
